# kobo-utils

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: docs-build.yml  installation.yml  windows.yml
docs/: common.md  contributing.md  index.md  installation.md  kobo_utils.md  usage.md
kobo_utils/: __init__.py  backup.py  cli.py  common.py  export.py  kobo_utils.py
tests/: __init__.py  test_backup.py  test_cli.py  test_export.py  test_kobo_utils.py
