[project]
name = "kobo-utils"
version = "0.0.1"
dynamic = [
    "dependencies",
]
description = "A collection of tools to help manage and interact with Kobo e-reader devices."
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "kobo-utils",
]
license = {text = "MIT License"}
authors = [
  {name = "Chase Allbright", email = "chase@chaseallbright.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.entry-points."console_scripts"]
kobo_utils = "kobo_utils.cli:main"

[project.optional-dependencies]
all = [
    "kobo-utils[extra]",
]

extra = [

]


[tool]
[tool.setuptools.packages.find]
include = ["kobo_utils*"]
exclude = ["docs*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.distutils.bdist_wheel]
universal = true


[tool.bumpversion]
current_version = "0.0.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "kobo_utils/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88


[project.urls]
Homepage = "https://github.com/kallbrig/kobo-utils"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"